--- a/app/templates/menu_list.html
+++ b/app/templates/menu_list.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Menu List</title>
-    </head>
-    <body>
-        <h1>Menu List</h1>
-        <form method="POST">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type = "submit">Submit</button>
-        </form>
-        <a href="{% url 'restaurant_list' %}">Restaurant Submission</a>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Add Menu Item</title>
+</head>
+<body>
+    <h1>Add a New Menu Item</h1>
+
+    <form method="POST">
+        {% csrf_token %}
+
+        {% for field in form %}
+            <div class="field">
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {{ field }}
+                {% if field.errors %}
+                    <ul class="errorlist">
+                        {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+        {% endfor %}
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <br>
+    <a href="{% url 'restaurant_list' %}">Back to Restaurants</a>
+    <a href="{% url 'menu_list' %}">Back to Menu List</a>
+</body>
 </html>
