Staff View Create View

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,5 +8,7 @@
         <a href="{% url 'restaurant_list' %}">Restaurant Submission</a>
         <h1>Menu List</h1>
         <a href="{% url 'menu_list' %}">Menu Submission</a>
+        <h1>Staff</h1>
+        <a href="{% url 'staff_view' %}">Staff Page</a>
     </body>
 </html>
