--- a/app/templates/menu_list.html
+++ b/app/templates/menu_list.html
@@ -30,5 +30,6 @@
     <br>
     <a href="{% url 'restaurant_list' %}">Back to Restaurants</a>
     <a href="{% url 'menu_list' %}">Back to Menu List</a>
+    <a href="{% url 'home_page' %}">Home Page</a>
 </body>
 </html>
