--- a/app/templates/restaurant_list.html
+++ b/app/templates/restaurant_list.html
@@ -27,5 +27,6 @@
         </ul>
 
         <a href="{% url 'menu_list' %}">Menu Submission</a>
+        <a href="{% url 'home_page' %}">Home Page</a>
     </body>
 </html>
