--- a/app/templates/staff_add.html
+++ b/app/templates/staff_add.html
@@ -7,10 +7,11 @@
         <h1>Add a New Staff Member</h1>
         <form method="POST">
             {% csrf_token %}
-            {{ staff_form.as_p }}
+            {{form.as_p}}
             <button type="submit">Submit</button>
         </form>
         <a href="{% url 'restaurant_list' %}">Back to Restaurants</a>
         <a href="{% url 'menu_list' %}">Menu Submission</a>
+        <a href="{% url 'home_page' %}">Home Page</a>
     </body>
 </html>
