--- a/app/templates/staff_add.html
+++ b/app/templates/staff_add.html
@@ -13,5 +13,6 @@
         <a href="{% url 'restaurant_list' %}">Back to Restaurants</a>
         <a href="{% url 'menu_list' %}">Menu Submission</a>
         <a href="{% url 'home_page' %}">Home Page</a>
+        <a href="{% url 'staff_list' %}">Staff List</a>
     </body>
 </html>
