Restaurant update, create, list, delete view

--- a/app/templates/staff_update.html
+++ b/app/templates/staff_update.html
@@ -10,6 +10,6 @@
         {{form.as_p}}
         <button type="submit">Save</button>
     </form>
-    <a href=" {% url 'staff_list' %}"></a>
+    <a href=" {% url 'staff_list' %}">Staff List</a>
 </body>
 </html>
